@@ -20,27 +20,6 @@ test {
     useJUnitPlatform()
 
     jvmArgs = [
-            '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
-            '--add-exports=javafx.graphics/com.sun.glass.utils=ALL-UNNAMED',
-            '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
-            '--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
-            '--add-exports=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
-            '--add-exports=javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
-            '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
-            '--add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
-            '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
-            '--add-opens=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED',
-            '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
-            '--add-opens=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
-            '--add-opens=javafx.graphics/javafx.scene.image=ALL-UNNAMED',
-            '--add-opens=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
-            '--add-opens=javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
-            '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
-            '--add-opens=javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
-            '--add-opens=javafx.base/javafx.beans=ALL-UNNAMED',
-            '--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED',
-            '--add-opens=javafx.base/javafx.collections=ALL-UNNAMED',
-
             '-Djava.awt.headless=false',
             '-Dtestfx.robot=glass',
             '-Dtestfx.headless=true',
